# c-http

./: .gitignore  CMakeLists.txt  README  README.md  libhttp.c  libhttp.h  main.c
lib/: CMakeLists.txt
lib/include/: dispatcher.h  methods.h  response.h  server.h
lib/src/: methods.c  server.c
